<?xml version="1.0" encoding="utf-8"?>
<ScrollView 
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:id="@+id/relativeLayout1"
	android:background="@drawable/message_list_view_bg"
	android:layout_width="fill_parent" 
	android:layout_height="fill_parent"
>
<RelativeLayout 
	android:id="@+id/relativeLayout1"
	android:background="@drawable/message_list_view_bg"
	android:layout_width="fill_parent" 
	android:layout_height="fill_parent"
>
    <RelativeLayout 
    	android:layout_height="47dip"
    	android:background="@drawable/top_bg"
		android:layout_width="fill_parent" 
		android:id="@+id/relativeLayout2"
		android:layout_alignParentTop="true" 
		android:layout_alignParentLeft="true"
		android:layout_alignParentRight="true"
	>
        <TextView 
        	android:id="@+id/name" 
        	android:text="@string/signin_profile"
			style="@style/TitleTextView"
		/>
	</RelativeLayout>
	<ImageView 
		android:layout_height="75dip"
		android:id="@+id/sign_thumb" 
		android:scaleType="fitXY"
		android:layout_width="75dip"
		android:src="@drawable/ic_contact_list_picture" 
		android:layout_below="@+id/relativeLayout2"
		android:layout_alignParentLeft="true" 
		android:layout_marginLeft="10dip"
		android:layout_marginTop="12dip"
	/>
	<EditText 
		android:layout_height="55dip" 
		android:id="@+id/sign_name"
		android:layout_width="wrap_content" 
		android:hint="@string/sign_name"
		android:textSize="15sp"
		android:gravity="top"
		android:paddingTop="15dip"
		android:paddingLeft="10dip"
		android:layout_marginRight="10dip"
		android:background="@drawable/normal_button"
		android:layout_below="@+id/sign_thumb" 
		android:layout_alignLeft="@+id/sign_thumb"
		android:layout_marginTop="10dip"
		android:layout_alignParentRight="true"
	/>
	<RelativeLayout 
		android:layout_height="wrap_content" 
		android:layout_width="wrap_content" 
		android:id="@+id/scrollView1" 
		android:layout_marginBottom="20dip"
		android:layout_marginTop="0dip"
		android:layout_alignLeft="@+id/sign_name" 
		android:layout_alignParentBottom="true" 
		android:layout_below="@+id/sign_name"
		android:layout_alignRight="@+id/sign_name"
	>
	<RelativeLayout 
		android:id="@+id/linearLayout1"
		android:layout_width="match_parent" 
		android:layout_height="match_parent"
	>
		<EditText 
			android:layout_height="45dip" 
			android:id="@+id/sign_phone"
			android:layout_width="wrap_content" 
			android:hint="@string/sign_phone"
			android:gravity="top" 
			android:clickable="true" 
			android:singleLine="true"
			android:paddingLeft="10dip"
			android:paddingTop="15dip" 
			android:textSize="15sp"
			android:background="@drawable/top_button"
			android:layout_alignParentTop="true" 
			android:layout_alignParentLeft="true"
			android:layout_alignParentRight="true"
		/>
		<EditText 
			android:layout_height="55dip" 
			android:id="@+id/sign_password"
			android:layout_width="wrap_content" 
			android:hint="@string/password"
			android:gravity="top" 
			android:clickable="true" 
			android:singleLine="true"
			android:paddingLeft="10dip"
			android:paddingTop="15dip" 
			android:textSize="15sp"
			android:layout_marginTop="0.5dip"
			android:background="@drawable/bottom_button"
			android:layout_below="@+id/sign_phone"
			android:layout_alignParentLeft="true"
			android:layout_alignParentRight="true"
		/>
		<TextView 
			android:layout_height="45dip" 
			android:id="@+id/sign_sex"
			android:layout_width="wrap_content" 
			android:text="@string/sex_signin"
			android:gravity="center_vertical"
			android:clickable="true" 
			android:background="@drawable/top_button"
			android:paddingLeft="10dip"
			android:layout_below="@+id/sign_password"
			android:layout_alignParentLeft="true"
			android:layout_alignParentRight="true"
		/>
		<Spinner 
			android:layout_height="55dip" 
			android:id="@+id/sign_address"
			android:layout_width="wrap_content" 
			android:text="@string/address"
			android:gravity="center_vertical"
			android:clickable="true" 
			android:layout_marginTop="0.5dip"
			android:background="@drawable/bottom_button"
			android:paddingLeft="0dip"
			android:layout_below="@+id/sign_sex"
			android:layout_alignParentLeft="true"
			android:layout_alignParentRight="true"
		/>
		<Button 
			android:layout_height="40dip"
			android:layout_width="fill_parent"
			android:layout_alignLeft="@+id/sign_address"
			android:layout_alignRight="@+id/sign_address"
			android:layout_below="@+id/sign_address"
			android:id="@+id/signin"
			android:text="@string/signin"
			android:textColor="#fff"
			android:textSize="20sp"
			android:layout_marginBottom="10dip"
			android:background="@drawable/button"
		/>
	</RelativeLayout>
	</RelativeLayout>
</RelativeLayout>
</ScrollView>

