<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout 
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:id="@+id/relativeLayout1"
	android:background="#eee"
	android:layout_width="fill_parent" 
	android:layout_height="fill_parent"
>
    <RelativeLayout 
    	android:layout_height="47dip"
    	android:background="@drawable/top_bg"
		android:layout_width="fill_parent" 
		android:id="@+id/relativeLayout2"
		android:layout_alignParentTop="true" 
		android:layout_alignParentLeft="true"
		android:layout_alignParentRight="true"
	>
        <TextView 
        	android:id="@+id/textView1" 
        	android:text="@string/send_broadcast"
			style="@style/TitleTextView"
		/>
		<Button 
			android:layout_alignParentRight="true"
			android:layout_height="32dip"
    		android:layout_width="60dip" 
    		android:textSize="18sp"
			android:layout_centerVertical="true"
			android:layout_marginRight="10dip"
			android:background="@drawable/button"
			android:textColor="#fff"
			android:onClick="onSendClick"
			android:text="@string/send"
		/>
	</RelativeLayout>
    <EditText 
    	android:layout_height="fill_parent"
    	android:layout_width="wrap_content" 
    	android:inputType="textMultiLine" 
    	android:id="@+id/edit_broad" 
    	android:hint="@string/input_broad_content"
    	android:layout_marginLeft="5dip"
    	android:layout_marginRight="7dip"
    	android:gravity="top"
    	android:layout_marginTop="7dip"
    	android:paddingLeft="2dip"
    	android:background="#00000000"
    	android:layout_alignParentLeft="true" 
    	android:layout_alignParentRight="true"
    	android:layout_below="@+id/relativeLayout2"
    >
	</EditText>	
</RelativeLayout>


