<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout 
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:id="@+id/relativeLayout1"
	android:background="#eee"
	android:layout_width="fill_parent" 
	android:layout_height="fill_parent"
>
    <RelativeLayout 
    	android:layout_height="47dip"
    	android:background="@drawable/top_bg"
		android:layout_width="fill_parent" 
		android:id="@+id/relativeLayout2"
		android:layout_alignParentTop="true" 
		android:layout_alignParentLeft="true"
		android:layout_alignParentRight="true"
	
	>
        <TextView 
        	android:id="@+id/textView1" 
        	android:text="@string/login_signin"
			style="@style/TitleTextView"
		/>
	</RelativeLayout>
    <Button 
    	android:layout_height="40dip" 
		android:layout_width="fill_parent"
		android:layout_marginLeft="20dip"
		android:layout_marginRight="20dip"
		android:background="@drawable/button"
    	android:text="@string/login"
    	android:textColor="#fff"
    	android:textSize="18sp"
    	android:id="@+id/login"
    	android:onClick="onLoginClick"
    	android:layout_centerHorizontal="true"
    	android:layout_above="@+id/signin"
    	android:layout_marginBottom="20dip"
    />
    <Button 
    	android:layout_height="40dip" 
		android:layout_width="fill_parent"
		android:layout_marginLeft="20dip"
		android:layout_marginRight="20dip"
		android:background="@drawable/button"
    	android:text="@string/signin"
    	android:id="@+id/signin"
    	android:textColor="#fff"
    	android:onClick="onSigninClick"
    	android:textSize="18sp"
    	android:layout_alignParentBottom="true"
    	android:layout_centerHorizontal="true"
    	android:layout_marginBottom="60dip"
    />
	
	
</RelativeLayout>


