<?xml version="1.0" encoding="utf-8"?>
<LinearLayout 
	android:id="@+id/root"
	android:orientation="vertical" 
	android:layout_width="fill_parent"
	android:background="@drawable/message_list_view_bg"
	android:layout_height="fill_parent" 
	xmlns:android="http://schemas.android.com/apk/res/android">
	<LinearLayout 
		android:id="@+id/layout_1"
		android:background="@drawable/top_bg" 
		android:layout_height="47dip"
		android:layout_width="match_parent">
		<TextView 
			android:id="@+id/textView1" 
			android:text="@string/login"
			style="@style/TitleTextView"
			android:layout_weight="1" 
			android:layout_height="match_parent"
		/>
	</LinearLayout>
	<LinearLayout 
		android:id="@+id/layout_2"
		android:background="@drawable/panel_bg" 
		android:layout_margin="10dip"
		android:minHeight="165dip" 
		android:layout_height="wrap_content"
		android:layout_width="match_parent" 
		android:orientation="vertical"
		
	>
		<EditText 
			android:layout_width="fill_parent"
			android:layout_height="50dip" 
			android:hint="@string/name"
			android:layout_alignParentTop="true" 
			android:layout_marginLeft="5dip"
			android:layout_marginRight="5dip" 
			android:layout_marginTop="10dip"
			android:id="@+id/name" 
			android:singleLine="true" 
			android:paddingLeft="10dip"
		/>
		
		<EditText 
			android:layout_width="fill_parent"
			android:layout_height="50dip" 
			android:hint="@string/password"
			android:layout_marginLeft="5dip" 
			android:layout_marginRight="5dip"
			android:id="@+id/password" 
			android:password="true"
			android:singleLine="true" 
			android:layout_below="@+id/name"
			android:paddingLeft="10dip"
		/>
		<LinearLayout 
			android:id="@+id/layout_3"
			android:layout_marginTop="5dip" 
			android:layout_marginLeft="10dip"
			android:layout_marginRight="10dip" 
			android:layout_width="match_parent"
			android:layout_height="40dip"
		>
			<TextView 
				android:text="@string/signin" 
				android:textColor="#7089c0"
				android:textSize="18sp" 
				android:gravity="center_vertical"
				android:layout_weight="10" 
				android:layout_width="wrap_content"
				android:textAppearance="?android:attr/textAppearanceMedium"
				android:id="@+id/textView2" 
				android:onClick="onSigninClick" 
				android:clickable="true"
				android:layout_height="match_parent"
			/>
			<Button 
				android:background="@drawable/button" 
				android:layout_weight="1"
				android:minWidth="80dip" 
				android:layout_height="40dip" 
				android:text="@string/login"
				android:textColor="#fff" 
				android:textSize="18sp" 
				android:id="@+id/login"
				android:layout_width="wrap_content" 
			/>
		</LinearLayout>
	</LinearLayout>
</LinearLayout>
