<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
       
        android:hint="@string/item_student_hint1"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/et1"
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:layout_below="@+id/name"
        android:layout_centerHorizontal="true" />

    <TextView
        android:id="@+id/mynub"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/et1"
        
        android:hint="@string/item_student_hint2"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/et2"
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:layout_below="@+id/mynub"
        />

    <TextView
        android:id="@+id/mynum"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@+id/et2"
       
        android:hint="@string/item_student_hint3"
        android:textSize="20sp" />

    <EditText
       
        android:id="@+id/et3"
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:layout_below="@+id/mynum" />
    
      <include
        android:id="@+id/line"
        android:layout_width="fill_parent"
        android:layout_height="10px"
        android:layout_below="@+id/et3"
        layout="@layout/line" >
    </include>
    

</RelativeLayout>