<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout 
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:id="@+id/relativeLayout1"
	android:background="@drawable/message_list_view_bg"
	android:layout_width="fill_parent" 
	android:layout_height="fill_parent"
>
    <RelativeLayout 
    	android:layout_height="47dip"
    	android:background="@drawable/top_bg"
		android:layout_width="fill_parent" 
		android:id="@+id/relativeLayout2"
		android:layout_alignParentTop="true" 
		android:layout_alignParentLeft="true"
		android:layout_alignParentRight="true"
	>
        <TextView 
        	android:id="@+id/name" 
        	android:text=""
			style="@style/TitleTextView"
		/>
	</RelativeLayout>
	<ImageView 
		android:layout_height="75dip"
		android:id="@+id/thumb" 
		android:layout_width="75dip"
		android:scaleType="fitXY"
		android:src="@drawable/ic_contact_list_picture" 
		android:layout_below="@+id/relativeLayout2"
		android:layout_alignParentLeft="true" 
		android:layout_marginLeft="10dip"
		android:layout_marginTop="12dip"
	/>
	<Button 
		android:layout_height="40dip" 
		android:id="@+id/send_letter"
		android:layout_width="wrap_content" 
		android:text="@string/chat_now"
		android:textSize="18sp"
		android:textColor="#fff"
		android:layout_marginRight="10dip"
		android:background="@drawable/button"
		android:layout_below="@+id/thumb" 
		android:layout_alignLeft="@+id/thumb"
		android:layout_marginTop="10dip"
		android:layout_alignParentRight="true"
	/>
	<ScrollView 
		android:layout_height="wrap_content" 
		android:layout_width="wrap_content" 
		android:id="@+id/scrollView1" 
		android:layout_marginTop="10dip"
		android:layout_marginBottom="10dip"
		android:layout_alignLeft="@+id/send_letter" 
		android:layout_alignParentBottom="true" 
		android:layout_below="@+id/send_letter"
		android:layout_alignRight="@+id/send_letter"
	>
	<RelativeLayout 
		android:id="@+id/linearLayout1"
		android:layout_width="match_parent" 
		android:layout_height="match_parent"
	>
		<TextView 
			android:layout_height="55dip" 
			android:id="@+id/phone"
			android:layout_width="wrap_content" 
			android:text="@string/phone"
			android:gravity="top" 
			android:clickable="true" 
			android:paddingLeft="10dip"
			android:paddingTop="15dip" 
			android:background="@drawable/normal_button"
			android:layout_alignParentTop="true" 
			android:layout_alignParentLeft="true"
			android:layout_alignParentRight="true"
		/>
		<TextView 
			android:layout_height="45dip" 
			android:id="@+id/sex"
			android:layout_width="wrap_content" 
			android:text="@string/sex"
			android:gravity="center_vertical"
			android:clickable="true" 
			android:background="@drawable/top_button"
			android:paddingLeft="10dip"
			android:layout_below="@+id/phone"
			android:layout_alignParentLeft="true"
			android:layout_alignParentRight="true"
		/>
		<TextView 
			android:layout_height="45dip" 
			android:id="@+id/address"
			android:layout_width="wrap_content" 
			android:text="@string/address"
			android:gravity="center_vertical"
			android:clickable="true" 
			android:layout_marginTop="0.5dip"
			android:background="@drawable/mid_button"
			android:paddingLeft="10dip"
			android:layout_below="@+id/sex"
			android:layout_alignParentLeft="true"
			android:layout_alignParentRight="true"
		/> 
		<TextView 
			android:layout_height="55dip" 
			android:id="@+id/is_friend"
			android:layout_width="wrap_content" 
			android:text="@string/is_friend"
			android:gravity="center_vertical"
			android:clickable="true" 
			android:layout_marginTop="0.5dip"
			android:background="@drawable/bottom_button"
			android:paddingLeft="10dip"
			android:layout_below="@+id/address"
			android:layout_alignParentLeft="true"
			android:layout_alignParentRight="true"
		/>
	</RelativeLayout>
	</ScrollView>
</RelativeLayout>


