<?xml version="1.0" encoding="utf-8"?>
<TableLayout 
	android:id="@+id/root"
	android:background="@drawable/message_list_view_bg"
	android:layout_width="fill_parent" 
	android:layout_height="fill_parent"
	xmlns:android="http://schemas.android.com/apk/res/android"
>
	<TableRow 
		android:id="@+id/layout_1" 
		android:layout_width="fill_parent"
		android:background="@drawable/top_bg" 
		android:layout_height="47dip"
	>
		<TextView 
			android:text="@string/login" 
			android:id="@+id/textView1" 
			style="@style/TitleTextView"
			android:layout_height="47dip"
		/>
	</TableRow>
	<TableLayout 
		android:id="@+id/layout_2"
		android:minHeight="165dip" 
		android:layout_margin="10dip"
		android:background="@drawable/panel_bg" 
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
	>
		<TableRow 
			android:id="@+id/tableRow2" 
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
		>
			<EditText 
				android:inputType="number"
				android:layout_marginLeft="5dip" 
				android:layout_marginRight="5dip"
				android:layout_marginTop="10dip" 
				android:id="@+id/name"
				android:layout_weight="1" 
				android:singleLine="true" 
				android:hint="@string/name"
				android:paddingLeft="10dip" 
				android:layout_height="50dip"
				android:layout_width="fill_parent"
			/>
		</TableRow>
		<TableRow 
			android:id="@+id/tableRow3" 
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
		>
			<EditText 
				android:inputType="textPassword"
				android:layout_height="50dip" 
				android:hint="@string/password"
				android:layout_marginLeft="5dip" 
				android:layout_marginRight="5dip"
				android:id="@+id/password" 
				android:password="true"
				android:layout_weight="1" 
				android:singleLine="true"
				android:paddingLeft="10dip" 
				android:layout_width="fill_parent"
			/>
		</TableRow>
		<TableRow 
			android:id="@+id/tableRow4" 
			android:layout_width="wrap_content"
			android:layout_marginLeft="10dip" 
			android:minWidth="100dip"
			android:layout_marginRight="10dip" 
			android:layout_marginTop="5dip"
			android:layout_height="wrap_content"
		>
			<TextView 
				android:text="@string/signin" 
				android:textColor="#7089c0"
				android:textSize="18sp" 
				android:gravity="center_vertical"
				android:layout_weight="10" 
				android:layout_width="wrap_content"
				android:textAppearance="?android:attr/textAppearanceMedium"
				android:id="@+id/textView2" 
				android:layout_height="match_parent" 
			/>
			<Button 
				android:background="@drawable/button"
				android:layout_weight="1" 
				android:minWidth="80dip"
				android:layout_height="40dip" 
				android:text="@string/login"
				android:textColor="#fff" 
				android:textSize="18sp" 
				android:id="@+id/login"
				android:layout_width="wrap_content" 
			/>
		</TableRow>

	</TableLayout>
</TableLayout>


